# PMIC-pipeline

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
pmic_pipeline/: pipeline.py
pmic_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results_illumina/SRR2584863/: SRR2584863_chr.sorted.bam.bai  SRR2584863_chr_AMR.csv  SRR2584863_chr_VF.csv  SRR2584863_chr_bamstats.txt  SRR2584863_chr_distance_trier.csv  SRR2584863_chr_markdup.bam.bai  SRR2584863_chr_metrics.txt  SRR2584863_chr_variant_filtered.vcf.gz.csi  SRR2584863_plasmid_0.sorted.bam.bai  SRR2584863_plasmid_0_bamstats.txt  SRR2584863_plasmid_0_markdup.bam.bai  SRR2584863_plasmid_0_metrics.txt  SRR2584863_plasmid_0_variant_filtered.vcf.gz.csi  SRR2584863_plasmid_AMR_0.csv  SRR2584863_plasmid_VF_0.csv  SRR2584863_plasmid_reference_0.fasta.amb  SRR2584863_plasmid_reference_0.fasta.ann  SRR2584863_plasmid_reference_0.fasta.bwt  SRR2584863_plasmid_reference_0.fasta.fai  SRR2584863_plasmid_reference_0.fasta.pac  SRR2584863_plasmid_reference_0.fasta.sa  contigs.paths  dataset.info  input_dataset.yaml  params.txt  run_spades.sh  run_spades.yaml
results_illumina/SRR2584863/K127/: assembly_graph.fastg  assembly_graph_with_scaffolds.gfa  final.lib_data
results_illumina/SRR2584863/K127/configs/: config.info
results_illumina/SRR2584863/K21/: final.lib_data
results_illumina/SRR2584863/K33/: final.lib_data
results_illumina/SRR2584863/K55/: final.lib_data
results_illumina/SRR2584863/K77/: final.lib_data
results_illumina/SRR2584863/K99/: final.lib_data
(+20 files in other folders)
